	* when using a Novag Citrine board, the referee mode selected is saved
	* updated zlib to version 1.2.3
	* FICS : 
			- IP address of FICS server is cached (faster login)
			- in case of a network error, quit FICS without popping tons of error messages
	* cleaned up code for Scid versions 2.x (don't think anybody still uses it)
	* Scid no longer crashes when importing a very long game (current limit is still 32 kB)
- Features
	* NAG support : add symbolic NAGs using UTF-8 symbols
	* Search position : if the search is done in a refrerence base (not the current one), don't switch to it if the result returns no game
	* Tree mask : 
		- added a sub-menu for searching positions in a mask depending upon various criteria (comments, NAG, color, etc.)
		- added a sub-menu for displaying the Mask content in a tree form
		- remember the most recent opened masks
		- new moves can be added to a mask even if there is no corresponding position in the Tree 
	* FICS : 
		- save options for finding opponents based on login
		- display forecast of win / draw / loss score (in fact sends assess when creating the game)
	* Highlight last move played (switchable and configurable in options menu)
	* added a new call "sc_game info nextMoveUCI"
	* new feature to review game. The user guesses moves played from one side of a played game.
	* game browser : automatically flip board if the main board is flipped
	* updated Scid icon (thanks to Israel Chauca Fuentes)
- Correspondence Chess:
	* Sorting of the gamelist  by various criteria like own clock, opponent clock (Xfcc only)
	* Do not show games where the player does not have the move (Xfcc only)
	* Add GUI to set sort criteria
	* Implement sort by "time per move till next TC" including the next timing period (Suggested by Dhanish)
	* Add Edit menu to cc window
- Translations:
	* updated spanish translation (thanks to Benigno Hernández)
	* updated swedish translation (thanks to Hans Eriksson)